# fastapi-prod-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  _deprecated_root_entrypoint.txt  alembic.ini  docker-compose.yml  pyproject.toml  run.main.bat
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  main.py
app/api/: router.py
app/api/v1/endpoints/: health.py  users.py
app/core/: __init__.py  config.py  logging.py  telemetry.py
app/db/: session.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: user_service.py
infra/monitoring/: prometheus.yml
tests/: conftest.py  test_health.py  test_integration.py  test_main.py  test_users.py  test_users_extended.py
